# ot-harjoitustyo

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: alustava_luokkakaavio.md  arkkitehtuuri.md  changelog.md  käyttöohje.md  luokkakaavio.md  mindmap_flow_chart.md  sekvenssikaavio.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .pylintrc
src/tests/: test_folderscreen.py  test_loadingscreen.py  test_main.py  test_start.py  test_users.py  test_usersscreen.py
src/tests/test_app/: test_mindmap_app.py
src/tests/test_folders/: test_folderscreen.py
src/tests/test_users/: test_usersscreen.py
src/tietotila/: all_windows.py  foldermanagement.py  folderselectionscreen.py  loadingscreen.py  main.py  mindmapapp.py  mindmapmanagement.py  mindmapscreen.py  testi.py  usermanagement.py  userselectionscreen.py
src/tietotila/app/: mindmap_app.py
src/tietotila/folders/: folder_management.py  folder_selection_screen.py
src/tietotila/loading_screen/: loading_screen.py
src/tietotila/mindmaps/: mindmap_management.py  mindmap_screen.py
src/tietotila/users/: user_management.py  user_selection_screen.py
