[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Tietotila_sovellus"
authors = ["Erik Huuskonen <eh.huuskonen@gmail.com>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.9"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pytest-qt = "^4.2.0"

[tool.pytest.ini_options]
qt_api = "pyqt5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
