[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Tietotila_sovellus"
authors = ["Erik Huuskonen <eh.huuskonen@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}] 

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.2"
invoke = "^2.0.0"
coverage = "^7.2.2"
pytest-qt = "^4.2.0"

[tool.pytest.ini_options]
qt_api = "pyqt5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
