[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "Tietotila_sovellus"
authors = ["Erik Huuskonen <eh.huuskonen@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}] 

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
coverage = "^7.2.2"
tk = "^0.1.0"
pytest = "^7.2.2"
pillow = "^9.5.0"
pylint = "^2.17.2"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
